# python-library

./: .codespell-ignore  .gitignore  .gitmodules  .hgignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  VERSION.txt  isort.cfg  keys-example.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini  urbanairship.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: ci.yaml  docs_release.yaml  pypi_test_upload.yaml  release_build_push.yaml  test_runner.yaml
docs/: Makefile  audience.rst  automation.rst  channel_uninstall.rst  client.rst  conf.py  creating-templates.rst  custom_events.rst  devices.rst  email.rst  examples.rst  experiments.rst  index.rst  location.rst  named_user.rst  pass_.rst  passes.rst  push.rst  reports.rst  segment.rst  sms.rst  static_lists.rst  tags.rst  template.rst  templates.rst
examples/: add-location.py  create_apple_pass.py  delete_template.py  duplicate_template.py  get_template.py  list_projects.py  list_templates.py
examples/pass/: get.py  list.py
examples/pass/apple/: create_boarding_pass.py  create_generic.py  create_pass.py  update_generic.py
examples/pass/google/: create_gift_card.py  create_pass.py  get.py  update_gift_card.py  update_pass.py
examples/templates/: add_location.py  delete.py  duplicate.py  get.py  list.py
examples/templates/apple/: create_coupon.py  create_gift_card.py  create_loyalty.py  create_member_card.py  (+4 more)
list/: .Python
reach/: __init__.py  common.py  core.py  fields.py  passes.py  templates.py  util.py
test/: pass_builders.py  template_builders.py  test_fields.py  test_pass.py  test_template.py  test_util.py
tests/: __init__.py  api_test.py  conftest.py  csv_smoke.csv  readme.txt  test_template.py
tests/automation/: test_automation.py
tests/client/: test_basic_auth_client.py  test_oauth_client.py  test_response.py  test_token_client.py  test_urls.py
tests/core/: test_airship.py  test_airship_urls.py  test_request_errors.py
tests/custom_events/: test_custom_events.py
tests/data/: attribute_list.csv  tag_list.csv
tests/devices/: test_attributes.py  test_channel_uninstall.py  test_device_info.py  test_device_listing.py  test_email.py  test_location.py  test_named_user.py  test_open_channel.py  test_segments.py  test_sms.py  test_static_lists.py  test_subscription_list.py  test_tags.py  test_tags_lists.py
tests/experiments/: test_experiment.py
tests/fetch/: test_device_info.py
tests/push/: test_audience.py  test_create_and_send.py  test_location.py  test_message.py  test_push.py  test_schedule.py  test_template.py  test_template_push.py
tests/reports/: test_experiments_reports.py  test_perpush.py  test_response_statistics.py
uareach/: __init__.py  common.py  core.py  fields.py  passes.py  templates.py  util.py
urbanairship/: __about__.py  __init__.py  client.py  common.py  core.py  enums.py  urls.py
urbanairship/automation/: __init__.py  core.py  pipeline.py
urbanairship/custom_events/: __init__.py  custom_events.py
urbanairship/devices/: __init__.py  attributes.py  channel_uninstall.py  devicelist.py  email.py  locationfinder.py  named_users.py  open_channel.py  seg_list_test.py  seg_test.py  segment.py  sms.py  static_lists.py  subscription_lists.py  tag.py  tag_lists.py
urbanairship/experiments/: __init__.py  core.py  experiment.py  variant.py
urbanairship/push/: __init__.py  audience.py  core.py  create_and_send.py  delivery.py  location.py  locationfinder.py  message.py  payload.py  schedule.py  template.py
urbanairship/reports/: __init__.py  experiments.py  per_push.py  reports.py  response_statistics.py
urbanairship_reach/: core.py  fields.py  passes.py  templates.py  util.py
wallet/: __init__.py  common.py  convenience.py  core.py  field.py  fields.py  location.py  pass_.py  passes.py  project.py  readme.txt  template.py  templates.py  util.py  wallet.py  wallet_iterable.py  wict.py
(+34 files in other folders)
