[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urbanairship"
dynamic = [
    "version",
    "description",
    "readme",
    "license",
    "authors",
    "classifiers",
    "urls",
    "dependencies",
    "optional-dependencies"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = [
    "urbanairship",
    "urbanairship.push",
    "urbanairship.devices",
    "urbanairship.reports",
    "urbanairship.automation",
    "urbanairship.experiments",
    "urbanairship.custom_events",
]
package-data = { "urbanairship" = ["py.typed"] }

[tool.setuptools.dynamic]
version = {attr = "urbanairship.__about__.__version__"}
description = {file = "README.rst"}
readme = {file = "README.rst", content-type = "text/x-rst"}

[tool.black]
line-length = 99
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 99
extend-ignore = "E203"  # to work with black
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=urbanairship --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["urbanairship"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
disable_error_code = "unreachable"

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "docs.*",
]
ignore_errors = true
